--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "src/index.js",
 	"scripts": {
-		"start": "node src/index.js",
+		"start": "cross-env NODE_ENV=production node src/index.js",
 		"dev": "cross-env NODE_ENV=development nodemon src/index.js"
 	},
 	"keywords": [],
