--- a/backend/package.json
+++ b/backend/package.json
@@ -12,11 +12,13 @@
 	"license": "ISC",
 	"dependencies": {
 		"@sendgrid/mail": "^7.7.0",
+		"axios": "^0.27.2",
 		"cors": "^2.8.5",
 		"cross-env": "^7.0.3",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
 		"express-mongo-sanitize": "^2.2.0",
+		"firebase-admin": "^11.0.1",
 		"http-status": "^1.5.2",
 		"joi": "^17.6.0",
 		"mongoose": "^6.5.0",
