--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
 		"joi": "^17.6.0",
 		"mongoose": "^6.5.0",
 		"morgan": "^1.10.0",
+		"nodemailer": "^6.7.8",
 		"winston": "^3.8.1",
 		"xss-clean": "^0.1.1"
 	},
